# SonicTerm

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROGRESS.md  README.md  RELEASE.md  baseline.json  clippy.toml  current.json  deny.toml  justfile  landmines.toml
crates/sonic-app/: Cargo.toml
crates/sonic-app/src/: app.rs  config_watch.rs  lib.rs  menu.rs  menubar_bridge.rs  os_drag.rs  tab_drag.rs
crates/sonic-app/tests/: a11y_persists_through_theme_switch.rs  app.rs  async_font_loader_attached_in_prod.rs  cheatsheet_binding_resolves.rs  child_close_auto_reaps.rs  child_window_new_window_action_drains.rs  child_window_resize_handles_no_renderer.rs  child_window_tab_actions_dispatch.rs  chord_intercept_before_pty.rs  clear_shape_cache_event.rs  click_without_drag_does_not_reorder.rs  clip_uses_pane_rect_not_grid.rs  close_pane_or_tab_semantics.rs  close_tab_single_press.rs  cmd_end_followed_by_prompt_start_fires_notification.rs  cmd_hover_no_url_no_underline.rs  cmd_hover_url_underline.rs  cmd_w_chain_main_window_quits.rs  cmd_w_chrome_mode_keeps_dock.rs  cmd_w_last_tab_chrome_mode.rs  cmd_w_last_tab_main_quits.rs  command_events_polled_for_background_tab.rs  command_events_polled_in_child_window.rs  command_palette.rs  concurrency_invariants.rs  config_watch.rs  cross_window_tab_transfer.rs  cursor_hyperlink_search_clipped_to_pane.rs  cursor_visible_survives_tear_out.rs  drag_chip_visual_feedback.rs  drag_thumbnail_nonempty.rs  drag_visual_feedback.rs  font_live_reload.rs  font_size_live_apply.rs  hidpi_hit_test.rs  hit_test_with_bottom_bar.rs  integrated_titlebar.rs  key_encoding_ctrl_alone.rs  language_change_marks_dirty.rs  last_window_close_behavior.rs  (+69 more)
crates/sonic-cfg/: Cargo.toml
crates/sonic-cfg/src/: config.rs  keymap.rs  lib.rs  theme.rs  url_open.rs  url_scan.rs
crates/sonic-cfg/tests/: accessibility_default.rs  backdrop_default.rs  color_shift_toward.rs  config.rs  high_contrast_overrides_theme.rs  keymap_new_tab_ctrl_t.rs  keymap_no_collisions.rs  keymap_palette_ctrl_shift_p.rs  keymap_path_resolution.rs  keymap_windows_ctrl_shift_arrows.rs  keymap_windows_essential_chords.rs  notifications_config_default.rs  padding_default_nonzero.rs  quit_on_last_window_close_default.rs  tab_bar_position_default.rs  theme_bundled.rs  theme_rejects_malformed.rs  theme_roundtrip.rs  url_open.rs  url_scan_utf8_safe.rs
crates/sonic-core/: Cargo.toml
crates/sonic-core/examples/: altscreen_smoke.rs  bench.rs  enter_repro.rs
crates/sonic-core/src/: config.rs  glyph_key.rs  grid.rs  hyperlink.rs  keymap.rs  lib.rs  pty.rs  theme.rs  vt.rs
crates/sonic-core/tests/: config.rs  config_font_default.rs  foreground_proc_win.rs  glyph_key.rs  grid.rs  grid_dirty_invariants.rs  keymap.rs  (+6 more)
crates/sonic-gpu/: Cargo.toml
crates/sonic-grid/: Cargo.toml
crates/sonic-logging/: Cargo.toml
crates/sonic-types/: Cargo.toml
crates/sonic-ui/: Cargo.toml
crates/sonic-vt/: Cargo.toml
crates/sonicterm-app/: CLAUDE.md  Cargo.toml
crates/sonicterm-block-glyph/: CLAUDE.md  Cargo.toml
crates/sonicterm-cfg/: CLAUDE.md  Cargo.toml
crates/sonicterm-core/: CLAUDE.md  Cargo.toml
crates/sonicterm-engine/: CLAUDE.md  Cargo.toml
crates/sonicterm-font/: CLAUDE.md  Cargo.toml
crates/sonicterm-font-config/: CLAUDE.md  Cargo.toml
crates/sonicterm-fontconfig/: CLAUDE.md  Cargo.toml
crates/sonicterm-freetype/: CLAUDE.md  Cargo.toml  build.rs
crates/sonicterm-gpu/: CLAUDE.md  Cargo.toml
crates/sonicterm-grid/: CLAUDE.md  Cargo.toml
crates/sonicterm-harfbuzz/: CLAUDE.md  Cargo.toml  build.rs
crates/sonicterm-io/: CLAUDE.md  Cargo.toml
crates/sonicterm-mac/: CLAUDE.md  Cargo.toml  build.rs
crates/sonicterm-mux/: CLAUDE.md  Cargo.toml
sonic-core/: Cargo.toml
sonic-core/examples/: bench.rs  enter_repro.rs  perf_dump.rs  pty_dump.rs  pty_dump_unicode.rs
sonic-core/src/: config.rs  config_tests.rs  foreground_proc.rs  glyph_key.rs  grid.rs  grid_tests.rs  hyperlink.rs  hyperlink_tests.rs  keymap.rs  keymap_tests.rs  lib.rs  proc_info.rs  pty.rs  ssh.rs  theme.rs  theme_tests.rs  url_open.rs  url_open_tests.rs  vt.rs  vt_tests.rs
sonic-core/tests/: config.rs  config_font_default.rs  foreground_proc_win.rs  glyph_key.rs  grid.rs  keymap.rs  ssh_handle.rs  theme.rs  url_open.rs  vt.rs  vt_ascii_fast_path.rs  vt_replies.rs
sonic-mac/: Cargo.toml
sonic-mac/src/: main.rs  menubar.rs  os_drag_mac.rs
sonic-mac/tests/: menu_blueprint.rs
sonic-mux/: Cargo.toml
sonic-mux/src/: frame.rs  lib.rs  main.rs  proto.rs  server.rs
sonic-mux/tests/: e2e.rs
sonic-shared/: Cargo.toml
sonic-shared/src/: app.rs  app_tests.rs  command_label.rs  command_palette.rs  config_watch.rs  cursor.rs  glyph_atlas.rs  i18n.rs  ime.rs  lib.rs  menubar_bridge.rs  os_drag.rs  os_drag_bridge.rs  overlays.rs  pane.rs  pane_tests.rs  prefs_renderer.rs  quad.rs  quad_tests.rs  render.rs  render_tests.rs  row_glyph_cache.rs  search.rs  search_tests.rs  selection.rs  selection_tests.rs  shape.rs  swash_rasterizer.rs  tab_drag.rs  tab_title.rs  tabbar_view.rs  tabbar_view_tests.rs  tabs.rs  tabs_tests.rs  text_pipeline.rs  ui_tokens.rs
sonic-shared/tests/: app.rs  atlas_lru.rs  cell_height_line_gap.rs  cjk_advance.rs  command_palette.rs  cursor.rs  drag_chip_visual_feedback.rs  glyph_atlas.rs  hidpi.rs  hidpi2.rs  hidpi_hit_test.rs  i18n.rs  ime.rs  ime_e2e.rs  integrated_titlebar.rs  mac_visual_regressions.rs  menubar_actions.rs  os_tab_drag.rs  padding_live_reload.rs  palette_chrome_follows_active_theme.rs  palette_round_corners.rs  prebake_atlas.rs  prefs_accent_swatch_uses_active_theme_accent.rs  render.rs  render_capability_matrix.rs  render_cjk.rs  render_overlay_zorder.rs  render_overlays.rs  scrollbar_hidden_default.rs  search_complete.rs  shape_lru.rs  swash_rasterizer.rs  tab_bar_height_polish.rs  tab_drag_merge.rs  tab_drag_ux.rs  tab_tearout.rs  tab_title.rs  tab_title_font_follows_config.rs  tab_title_spans.rs  tabbar_view.rs  (+5 more)
sonic-windows/: Cargo.toml
sonic-windows/src/: main.rs  menubar.rs  os_drag_win.rs
sonic-windows/wix/: main.wxs
(+1083 files in other folders)
