[workspace]
resolver = "2"
members = ["crates/sonic-types", "crates/sonic-vt", "crates/sonic-grid", "crates/sonic-cfg", "crates/sonic-io", "crates/sonic-core", "crates/sonic-text", "crates/sonic-shared", "crates/sonic-mac", "crates/sonic-windows", "crates/sonic-mux"]
default-members = ["crates/sonic-core", "crates/sonic-shared"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["Sonic Terminal contributors"]
license = "MIT"
repository = "https://github.com/D0n9X1n/sonic"
homepage = "https://github.com/D0n9X1n/sonic"
readme = "README.md"

[workspace.dependencies]
# Internal
sonic-types = { path = "crates/sonic-types", version = "0.3.0" }
sonic-vt = { path = "crates/sonic-vt", version = "0.3.0" }
sonic-grid = { path = "crates/sonic-grid", version = "0.3.0" }
sonic-cfg = { path = "crates/sonic-cfg", version = "0.3.0" }
sonic-io = { path = "crates/sonic-io", version = "0.3.0" }
sonic-core = { path = "crates/sonic-core", version = "0.3.0" }
sonic-text = { path = "crates/sonic-text", version = "0.3.0" }
sonic-shared = { path = "crates/sonic-shared", version = "0.3.0" }

# Core terminal
vte = "0.15"
portable-pty = "0.9"
unicode-width = "0.2"
unicode-segmentation = "1.13"

# Async / runtime
tokio = { version = "1.52", features = ["full"] }
crossbeam-channel = "0.5"
# SSH client (optional; enabled via sonic-core/ssh feature)
russh = "0.46"
parking_lot = "0.12"

# Rendering — these three move as a coherent triple
wgpu = "29"
glyphon = "0.11"
cosmic-text = "0.18"
swash = "0.2"
fontdb = "0.23"
bytemuck = { version = "1.25", features = ["derive"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
toml = "1"
notify = "8"

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

bitflags = { version = "2", features = ["serde"] }
serde_plain = "1"
pollster = "0.4"
arboard = "3"
regex = "1"

# Platform
[workspace.dependencies.windows]
version = "0.62"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D12",
    "Wdk_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

# Performance profile — extreme
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = "limited"
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
