[workspace]
resolver = "2"
members = ["crates/sonicterm-types", "crates/sonicterm-vt", "crates/sonicterm-grid", "crates/sonicterm-cfg", "crates/sonicterm-io", "crates/sonicterm-core", "crates/sonicterm-text", "crates/sonicterm-ui", "crates/sonicterm-render-model", "crates/sonicterm-gpu", "crates/sonicterm-shared", "crates/sonicterm-app", "crates/sonicterm-mac", "crates/sonicterm-windows", "crates/sonicterm-mux", "crates/sonicterm-logging"]
default-members = ["crates/sonicterm-core", "crates/sonicterm-shared"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
authors = ["SonicTerm Terminal contributors"]
license = "MIT"
repository = "https://github.com/D0n9X1n/sonic"
homepage = "https://github.com/D0n9X1n/sonic"
readme = "README.md"

[workspace.dependencies]
# Internal
sonicterm-types = { path = "crates/sonicterm-types", version = "0.3.0" }
sonicterm-vt = { path = "crates/sonicterm-vt", version = "0.3.0" }
sonicterm-grid = { path = "crates/sonicterm-grid", version = "0.3.0" }
sonicterm-cfg = { path = "crates/sonicterm-cfg", version = "0.3.0" }
sonicterm-io = { path = "crates/sonicterm-io", version = "0.3.0" }
sonicterm-core = { path = "crates/sonicterm-core", version = "0.3.0" }
sonicterm-text = { path = "crates/sonicterm-text", version = "0.3.0" }
sonicterm-ui = { path = "crates/sonicterm-ui", version = "0.3.0" }
sonicterm-render-model = { path = "crates/sonicterm-render-model", version = "0.3.0" }
sonicterm-gpu = { path = "crates/sonicterm-gpu", version = "0.3.0" }
sonicterm-shared = { path = "crates/sonicterm-shared", version = "0.3.0" }
sonicterm-app = { path = "crates/sonicterm-app", version = "0.3.0" }
sonicterm-logging = { path = "crates/sonicterm-logging", version = "0.3.0" }

# Core terminal
vte = "0.15"
portable-pty = "0.9"
unicode-width = "0.2"
unicode-segmentation = "1.13"

# Async / runtime
tokio = { version = "1.52", features = ["full"] }
crossbeam-channel = "0.5"
# SSH client (optional; enabled via sonicterm-core/ssh feature)
russh = "0.46"
parking_lot = "0.12"

# Rendering — these three move as a coherent triple
wgpu = "29"
glyphon = "0.11"
cosmic-text = "0.18"
swash = "0.2"
fontdb = "0.23"
bytemuck = { version = "1.25", features = ["derive"] }

# Config / serialization
serde = { version = "1", features = ["derive"] }
toml = "1"
notify = "8"

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

bitflags = { version = "2", features = ["serde"] }
serde_plain = "1"
pollster = "0.4"
arboard = "3"
regex = "1"

# Platform
[workspace.dependencies.windows]
version = "0.62"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D12",
    "Wdk_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

# Performance profile — extreme
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = "limited"
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
