[workspace]
resolver = "2"
members = ["crates/sonicterm-types", "crates/sonicterm-vt", "crates/sonicterm-grid", "crates/sonicterm-cfg", "crates/sonicterm-io", "crates/sonicterm-text", "crates/sonicterm-ui", "crates/sonicterm-render-model", "crates/sonicterm-gpu", "crates/sonicterm-app-core", "crates/sonicterm-app", "crates/sonicterm-mac", "crates/sonicterm-windows", "crates/sonicterm-mux", "crates/sonicterm-logging", "crates/sonicterm-engine", "crates/sonicterm-block-glyph", "crates/sonicterm-font", "crates/sonicterm-font-config", "crates/sonicterm-freetype", "crates/sonicterm-harfbuzz", "crates/sonicterm-fontconfig"]
default-members = ["crates/sonicterm-app"]

[workspace.package]
version = "0.10.9"
edition = "2021"
rust-version = "1.80"
authors = ["SonicTerm Terminal contributors"]
license = "MIT"
repository = "https://github.com/D0n9X1n/SonicTerm"
homepage = "https://github.com/D0n9X1n/SonicTerm"
readme = "README.md"

[workspace.dependencies]
# Internal
sonicterm-types = { path = "crates/sonicterm-types", version = "0.10.9" }
sonicterm-vt = { path = "crates/sonicterm-vt", version = "0.10.9" }
sonicterm-grid = { path = "crates/sonicterm-grid", version = "0.10.9" }
sonicterm-cfg = { path = "crates/sonicterm-cfg", version = "0.10.9" }
sonicterm-io = { path = "crates/sonicterm-io", version = "0.10.9" }
sonicterm-text = { path = "crates/sonicterm-text", version = "0.10.9" }
sonicterm-ui = { path = "crates/sonicterm-ui", version = "0.10.9" }
sonicterm-render-model = { path = "crates/sonicterm-render-model", version = "0.10.9" }
sonicterm-gpu = { path = "crates/sonicterm-gpu", version = "0.10.9" }
sonicterm-app = { path = "crates/sonicterm-app", version = "0.10.9" }
sonicterm-app-core = { path = "crates/sonicterm-app-core", version = "0.10.9" }
sonicterm-logging = { path = "crates/sonicterm-logging", version = "0.10.9" }
sonicterm-block-glyph = { path = "crates/sonicterm-block-glyph", version = "0.10.9" }
sonicterm-font = { path = "crates/sonicterm-font", version = "0.10.9" }
sonicterm-font-config = { path = "crates/sonicterm-font-config", version = "0.10.9" }
sonicterm-fontconfig = { path = "crates/sonicterm-fontconfig", version = "0.10.9" }
sonicterm-freetype = { path = "crates/sonicterm-freetype", version = "0.10.9" }
sonicterm-harfbuzz = { path = "crates/sonicterm-harfbuzz", version = "0.10.9" }

# Core terminal
vte = "0.15"
portable-pty = "0.9"
unicode-width = "0.2"
unicode-segmentation = "1.13"

# Async / runtime
tokio = { version = "1.52", features = ["full"] }
crossbeam-channel = "0.5"
# SSH client (optional; enabled via sonicterm-io/ssh feature)
russh = "0.61"
parking_lot = "0.12"

# Rendering
# T13/T14 (wezterm-takeover G3): glyphon + cosmic-text deleted. The
# renderer now drives chrome text through `chrome_text::layout` →
# `WeztermRasterizer` → shared `GlyphAtlas` → existing wgpu
# `TextPipeline` (see `sonicterm-gpu/src/chrome_text.rs`). sonicterm-font
# is the sole shaper + rasterizer.
wgpu = "29"
swash = "0.2"
fontdb = "0.23"
bytemuck = { version = "1.25", features = ["derive"] }
# T5 (wezterm-takeover G2A): vendored customglyph.rs uses tiny-skia for
# Powerline/triangle/Poly path rasterization. Version matches wezterm-gui
# @ 577474d (`tiny-skia = "0.11"`). The crate itself is added to
# sonicterm-block-glyph's [dependencies] by T7; T5 only pins the workspace
# version.
tiny-skia = "0.11"

# Config / serialization
serde = { version = "1", features = ["derive"] }
toml = "1"
notify = "8"

# Logging / errors
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Windowing
winit = "0.30"
raw-window-handle = "0.6"

bitflags = { version = "2", features = ["serde"] }
cc = { version = "1", features = ["parallel"] }
fixed = "1.29"
libc = "0.2"
pkg-config = "0.3"
serde_plain = "1"
pollster = "0.4"
arboard = "3"
regex = "1"

# Platform
[workspace.dependencies.windows]
version = "0.62"
features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Direct3D12",
    "Wdk_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]

# Performance profile — extreme
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = false
incremental = false

[profile.dev]
opt-level = 1
debug = "limited"
split-debuginfo = "unpacked"
incremental = true

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
