[package]
name = "sonic-mac"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — macOS app"

[lints]
workspace = true

[dependencies]
sonic-core.workspace = true
sonic-shared.workspace = true
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = ["NSPasteboard"] }

[[bin]]
name = "sonic-mac"
path = "src/main.rs"
