[package]
name = "sonic-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — shared: window, tabs, panes, app loop"

[lints]
workspace = true

[dependencies]
sonic-core.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
glyphon.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pollster.workspace = true
arboard.workspace = true

[dev-dependencies]
tempfile = "3"

[[example]]
name = "pane_smoke"
path = "examples/pane_smoke.rs"
