[package]
name = "sonic-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — shared: window, tabs, panes, app loop"

[lints]
workspace = true

[features]
default = []
# Forwards to sonic-core/ssh so the bin crates can enable SSH at build time
# with a single `--features ssh` on the workspace.
ssh = ["sonic-core/ssh"]

[dependencies]
sonic-core.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
glyphon.workspace = true
cosmic-text.workspace = true
swash.workspace = true
fontdb.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pollster.workspace = true
arboard.workspace = true
regex = { workspace = true }
notify.workspace = true
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
sys-locale = "0.3"
serde.workspace = true
serde_json = "1"

[dev-dependencies]
tempfile = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
image_hasher = "3"

[[example]]
name = "pane_smoke"
path = "examples/pane_smoke.rs"
