[package]
name = "sonic-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — app loop, windowing glue, OS drag, menubar bridge"

[lints]
workspace = true

[features]
default = []
ssh = ["sonic-core/ssh", "sonic-shared/ssh"]

[dependencies]
sonic-core.workspace = true
sonic-text.workspace = true
sonic-gpu.workspace = true
sonic-ui.workspace = true
sonic-shared.workspace = true
sonic-render-model.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
glyphon.workspace = true
cosmic-text.workspace = true
swash.workspace = true
fontdb.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pollster.workspace = true
arboard.workspace = true
regex = { workspace = true }
notify.workspace = true
serde.workspace = true
serde_json = "1"

[dev-dependencies]
tempfile = "3"
