[package]
name = "sonic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — core: VT parser, grid, PTY, config, keymap, theme"

[lints]
workspace = true

[dependencies]
vte.workspace = true
portable-pty.workspace = true
unicode-width.workspace = true
unicode-segmentation.workspace = true
serde.workspace = true
toml.workspace = true
notify.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytemuck.workspace = true
bitflags.workspace = true
serde_plain.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
