[package]
name = "sonic-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — deprecated façade re-exporting sonic-{vt,grid,cfg,io}"

[lints]
workspace = true

[features]
default = []
# Forwards to `sonic-io/ssh` — keeps the old `sonic-core/ssh` feature working.
ssh = ["sonic-io/ssh"]

[dependencies]
sonic-types.workspace = true
sonic-vt.workspace = true
sonic-grid.workspace = true
sonic-cfg.workspace = true
sonic-io.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1"
tempfile = "3"
parking_lot.workspace = true
toml.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true

[[example]]
name = "pty_dump"
path = "examples/pty_dump.rs"
