[package]
name = "sonic-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — GPU pipeline primitives (quad, text, atlas upload)"

[lints]
workspace = true

[dependencies]
sonic-types.workspace = true
sonic-text.workspace = true
sonic-render-model.workspace = true
wgpu.workspace = true
glyphon.workspace = true
cosmic-text.workspace = true
bytemuck.workspace = true
tracing.workspace = true

[dev-dependencies]
pollster = "0.4"
