[package]
name = "sonic-grid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — grid + hyperlink registry"

[lints]
workspace = true

[dependencies]
sonic-types.workspace = true
unicode-width.workspace = true
