[package]
name = "sonic-logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — tracing init, rolling file sinks, retention, and crash dumps"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
serde.workspace = true
parking_lot.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
