[package]
name = "sonic-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
