[package]
name = "sonic-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — pure-data UI state and layout (tabs, panes, selection, search, palette, overlays, prefs view, ui_tokens). No winit, no wgpu, no glyphon."

[lints]
workspace = true

[dependencies]
sonic-types.workspace = true
sonic-cfg.workspace = true
# sonic-grid is a pure-data crate (Grid/Cell/CellFlags) — selection.rs and
# search.rs need it. This is a deliberate deviation from the PR-5 plan,
# which listed only {sonic-types, sonic-cfg}; sonic-grid is data-only
# (no wgpu/winit/glyphon) so the "pure UI state, no GPU" invariant holds.
sonic-grid.workspace = true
regex.workspace = true
nucleo-matcher = "0.3"
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
fluent-bundle = "0.15"
fluent-langneg = "0.13"
unic-langid = { version = "0.9", features = ["macros"] }
intl-memoizer = "0.5"
sys-locale = "0.3"
resvg = "0.43"
usvg = "0.43"
tiny-skia = "0.11"

[dev-dependencies]
tempfile = "3"
