[package]
name = "sonicterm-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicTerm Terminal — app loop, windowing glue, OS drag, menubar bridge"

[lints]
workspace = true

[features]
default = []
ssh = ["sonicterm-io/ssh"]

[dependencies]
sonicterm-app-core.workspace = true
sonicterm-types.workspace = true
bytes = "1"
smallvec = "1"
sonicterm-logging.workspace = true
sonicterm-cfg.workspace = true
sonicterm-grid.workspace = true
sonicterm-vt.workspace = true
sonicterm-io.workspace = true
sonicterm-text.workspace = true
sonicterm-gpu.workspace = true
sonicterm-ui.workspace = true
sonicterm-render-model.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
wgpu.workspace = true
glyphon.workspace = true
cosmic-text.workspace = true
swash.workspace = true
fontdb.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pollster.workspace = true
arboard.workspace = true
regex = { workspace = true }
notify.workspace = true
serde.workspace = true
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(target_os = "windows")'.dependencies]
notify-rust = "4"

[dev-dependencies]
sonicterm-cfg.workspace = true
sonicterm-grid.workspace = true
sonicterm-io.workspace = true
sonicterm-vt.workspace = true
tempfile = "3"
