[package]
name = "sonicterm-cfg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — config / theme / keymap / url_open loaders"

[lints]
workspace = true

[dependencies]
sonicterm-types.workspace = true
sonicterm-logging.workspace = true
serde.workspace = true
toml.workspace = true
serde_plain.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1.4"
