[package]
name = "sonicterm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicTerm Terminal — deprecated façade re-exporting sonic-{vt,grid,cfg,io}"

[lints]
workspace = true

[features]
default = []
# Forwards to `sonicterm-io/ssh` — keeps the old `sonicterm-core/ssh` feature working.
ssh = ["sonicterm-io/ssh"]
# Exposes test-only helpers (ShellDialect for the e2e gate examples + integration tests).
# Not for shipping use — gated behind cfg(feature = "test_support") so production builds
# don't pull it in.
test_support = ["sonicterm-io/test_support"]

[dependencies]
sonicterm-types.workspace = true
sonicterm-vt.workspace = true
sonicterm-grid.workspace = true
sonicterm-cfg.workspace = true
sonicterm-io.workspace = true

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1"
tempfile = "3"
parking_lot.workspace = true
toml.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true
# Examples need the ShellDialect helpers. Enable test_support via dev-deps
# so `cargo build --examples` / `cargo run --example` pull it in automatically.
sonicterm-core = { path = ".", features = ["test_support"] }

[[example]]
name = "pty_dump"
path = "examples/pty_dump.rs"
