[package]
name = "sonicterm-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log = "0.4"
sonicterm-types.workspace = true
sonicterm-grid.workspace = true
sonicterm-text.workspace = true
sonicterm-font.workspace = true
config = { package = "sonicterm-font-config", path = "../sonicterm-font-config" }
