[package]
name = "sonicterm-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SonicTerm Terminal — GPU pipeline primitives (quad, text, atlas upload)"

[lints]
workspace = true

[features]
# #538: gate `emit_one_glyph_for_trace` (and the `GlyphEmitTrace` type)
# behind a feature so production builds don't carry test-only symbols.
# Integration tests under `tests/` enable it implicitly via `cfg(test)`,
# but cross-crate test harnesses that consume the seam can opt-in.
test-emit-trace = []

[dependencies]
sonicterm-types.workspace = true
sonicterm-text.workspace = true
sonicterm-render-model.workspace = true
sonicterm-grid.workspace = true
sonicterm-cfg.workspace = true
sonicterm-ui.workspace = true
sonicterm-engine = { path = "../sonicterm-engine", version = "0.3.0" }
# T9 (wezterm-takeover G2/C): `flush_shape_run` dispatches on
# `BlockKey::from_char` at each cluster lead cell so box-drawing,
# Powerline, Sextant, Octant, and Braille glyphs route through the
# vendored wezterm geometry instead of the font fallback chain. The
# atlas keys the resulting tiles under `font_slot = 0xFF` (sentinel),
# so the wezterm shape path and the block-sprite path never collide.
sonicterm-block-glyph = { path = "../sonicterm-block-glyph", version = "0.3.0" }
wgpu.workspace = true
bytemuck.workspace = true
winit.workspace = true
anyhow.workspace = true
tracing.workspace = true
pollster.workspace = true
unicode-width.workspace = true

[dev-dependencies]
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
image_hasher = "3"
tempfile = "3"
# #538: enable the trace seam in our own integration tests by depending
# on ourselves with the feature on. cargo handles the cycle correctly
# for dev-dependencies.
sonicterm-gpu = { path = ".", features = ["test-emit-trace"] }
