[package]
name = "sonicterm-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Sonic Terminal — PTY + process probes (+ optional SSH backend)"

[lints]
workspace = true

[features]
default = []
# Optional SSH client backend. Pulls in russh + a tokio runtime, so it's
# off by default to keep the cold build slim. Enable with
# `cargo build -p sonicterm-io --features ssh` (or via the bin crate).
ssh = ["dep:russh", "dep:tokio", "dep:async-trait"]

[dependencies]
sonicterm-types.workspace = true
portable-pty.workspace = true
crossbeam-channel.workspace = true
parking_lot.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
bytes = "1"
russh = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
async-trait = { version = "0.1", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libproc = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
